# gradio-vad-example

./: Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
